#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-04-13>

Added =elfeed= replacement with =newsticker=

** <2025-04-12>

Added =csv-parse-buffer=/package csv replacement

** <2025-03-04>

Added LLM client replacement with simple local ollama communication/package

** <2025-02-27>

Improve vc-dir header to highlight current branch

- Added an optional `separator` argument to customize branch display.
- Current branch is now highlighted using text properties.
- Default separator set to `" | "` for better readability.

** <2025-02-16>

Add function to display Git branches in *vc-dir* header line

** <2025-02-05>

Refactor and enhance Ollama integration

- Introduce `ollama-buddy` customization group
- Improve model selection and error handling
- Enhance chat UI with separators and intro message
- Add helper functions for formatting menus and retrieving models
- Refactor process handling and request execution

** <2025-02-04>

Add LLM-powered interactive chat utilities and commands

- Introduced `ollama-send` for streaming responses from the Ollama API.
- Added interactive menu `llm-shell-menu` with commands for chat, code refactoring, proofreading, and more.
- Enabled dynamic model switching and request cancellation.
- Bound `llm-shell-menu` to `C-c g`.

** <2025-01-30>

Improved html export backend logic

- Enhanced `org-export-before-processing` to dynamically set src block filters

** <2025-01-28>

Enhance mode-line and UI customization logic

- Improve `mode-line` color handling by dynamically adjusting inactive backgrounds based on theme brightness.
- Replace `darken-color` with `adjust-color` for versatile color adjustments.